[project]
name = "energa-my-meter-wrapper"
version = "1.0.0"
description = "This is a wrapper project for Energa My Meter - a custom component for Home Assistant"
authors = [{ name = "Dorian Krefft", email = "dorian.krefft@gmail.com" }]
readme = "README.md"
requires-python = " >= 3.12"
dependencies = [
    "homeassistant >= 2024",
    "voluptuous >= 0.13",
    "lxml >= 5.2",
    "mechanize >= 0.4"
]

[project.optional-dependencies]
dev = [
    "pylint-gitlab >= 2.0",
    "pylint >= 3.3",
    "pytest >= 8.3",
    "pytest-cov >= 5.0",
    "pytest-homeassistant-custom-component >= 0.13.172",
    "pytest-asyncio >= 0.20.3"
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

